# pharma-os

./: .dockerignore  .gitignore  COLAB_T4_GUIDE.md  DRUG_DISCOVERY_RESEARCH.md  Dockerfile  PROJECT_LOG.md  PharmaOS_PPO_Colab.ipynb  README.md  client.py  inference.py  launch_dashboard.ps1  models.py  openenv.yaml  pyproject.toml  pytest.ini  requirements.txt  train_ppo.py
data/: pharma_solubility_net.pt
scripts/: preflight.py  validate-submission.sh
server/: __init__.py  __main__.py  agent.py  app.py  compound_lookup.py  environment.py  ml_engine.py  sa_score.py  web_ui.html
tests/: __init__.py  test_agent.py  test_api.py  test_compound_lookup.py  test_environment.py  test_inference.py  test_packaging.py  test_repo_hygiene.py  test_training.py
