 [build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pharma-os"
version = "2.0.0"
description = "Drug Discovery Molecular Optimization RL Environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Soumoditya Das", email = "soumoditt@gmail.com"},
]
keywords = [
    "reinforcement-learning",
    "drug-discovery",
    "cheminformatics",
    "openenv",
    "molecular-optimization",
    "rdkit",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "numpy>=1.26.0",
    "openenv-core>=0.2.3",
    "rdkit>=2023.9.1",
    "requests>=2.31.0",
    "scikit-learn>=1.5.0",
    "openai>=1.23.0",
    "websockets>=12.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.0.0",
    "pysmiles>=1.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
pharma-server = "server.app:main"
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pharma_os*", "server*"]

[project.urls]
Homepage = "https://huggingface.co/spaces/soumoditya/pharma-os"
Repository = "https://github.com/soumoditt-source/pharma-os"
